--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 .header {
-	background-color: #FF99FF;
+	background-color: #f5f5f5;
 	height: 100px;
 	padding: 20px 20px;
 	margin: 0px 0px;
