--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+	background-color: #FFFFCC;
+	font-style: normal;
+	font-family: sans-serif;
+}
+
 .my_name {
 	font-size: 30px;
 	color: #CC6633;
@@ -15,4 +21,13 @@
 	height: 100px;
 	padding: 20px 20px;
 	margin: 0px 0px;
+}
+
+section {
+	border: 1px solid #FFCCCC;
+	border-radius: 20px;
+	width: 200px;
+	height: auto;
+	margin: 20px 10px;
+	padding: 10px;
 }
