--- a/style.css
+++ b/style.css
@@ -8,12 +8,14 @@ body {
 	font-size: 30px;
 	color: #CC6633;
 	font-style: italic;
+	text-shadow: 1px 1px 2px black, 0 0 1em red;
 }
 
 .header_name {
 	font-style: italic;
 	color: #CC6633;
 	font-size: 24px;
+	text-shadow: 1px 1px 2px black, 0 0 1em red;
 }
 
 .header {
@@ -26,7 +28,7 @@ body {
 section {
 	border: 1px solid #FFCCCC;
 	border-radius: 20px;
-	width: 200px;
+	width: 45%;
 	height: auto;
 	margin: 20px 10px;
 	padding: 10px;
