--- a/style.css
+++ b/style.css
@@ -1,35 +1,46 @@
 body {
-	background-color: #FFFFCC;
+	background-color: #c8a569;
 	font-style: normal;
 	font-family: sans-serif;
+	color: #CCCC99;
+	margin: 0;
+	padding: 0;
 }
 
 .my_name {
 	font-size: 30px;
-	color: #CC6633;
+	color: #662d1a;
 	font-style: italic;
-	text-shadow: 1px 1px 2px black, 0 0 1em red;
+	text-shadow: 1px 1px 1px black, 0 0 1em white;
 }
 
 .header_name {
 	font-style: italic;
-	color: #CC6633;
+	color: #662d1a;
 	font-size: 24px;
-	text-shadow: 1px 1px 2px black, 0 0 1em red;
+	text-shadow: 1px 1px 1px black, 0 0 1em white;
 }
 
 .header {
-	background-color: #f5f5f5;
+	background-color: #eadab0;
 	height: 100px;
 	padding: 20px 20px;
 	margin: 0px 0px;
 }
 
-section {
-	border: 1px solid #FFCCCC;
+.section {
+	border: 1px solid #FFFFCC;
 	border-radius: 20px;
-	width: 45%;
+	width: 40%;
 	height: auto;
-	margin: 20px 10px;
-	padding: 10px;
+	padding: 15px;
+	background-color: #af4324;
+	min-height: 350px;
+}
+
+.container {
+	height: 500px;
+	display: flex;
+	justify-content: space-around;
+	margin-top: 20px;
 }
