--- a/style.css
+++ b/style.css
@@ -42,5 +42,7 @@ body {
 	height: 500px;
 	display: flex;
 	justify-content: space-around;
-	margin-top: 20px;
-}
+	align-items: flex-start;
+	margin-top: 15px;
+	background-color: #CCCC99
+	}
