--- a/style.css
+++ b/style.css
@@ -23,13 +23,10 @@ h1, h2, h3, h4, h5, h6 {
 	align-content: center; 
     width: 100%;
     height: 100vh;
-	}
-
-
 }
 
 h1 {
-	font-family: 'Swanky and Moo Moo', cursive;
+	font-family: 'Swanky and Moo', cursive;
 	font-size: 72px;
 	
 }
