--- a/style.css
+++ b/style.css
@@ -13,27 +13,41 @@ h1, h2, h3, h4, h5, h6 {
 .container {
     width: 100%;
     max-width: 1200px;
-    margin: 0 auto;
+	margin: 0 auto;
+	
 }
 
 /* Header */
 
 .header {
-	margin: 0 auto;
-	align-content: center; 
-    width: 100%;
-    height: 100vh;
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	height: 100vh;
+	
+	align-items: center;
+}
+
+img {
+	align-self: center;
 }
 
 h1 {
 	font-family: 'Swanky and Moo', cursive;
 	font-size: 72px;
+	align-content: center;
+	
 	
 }
 
 h2 {
 	font-family: 'Kaushan Script', cursive;
 	font-size: 40px;
+}
+
+.social {
+	display: flex;
+	align-content: space-around;
 }
 
 
