--- a/mogo/assets/css/style.css
+++ b/mogo/assets/css/style.css
@@ -416,13 +416,45 @@ hr {
 
 .accordion__item {
     border: 1px solid #e5e5e5;
+    margin-bottom: 10px;
+}
+
+.accordion__item.active
+.accordion__content {
+    display: block;   
+}
+
+.accordion__item.active 
+.accordion__header {
+    border-bottom-color:#e5e5e5;
+}
+
+
+.accordion__item.active 
+.accordion__header:after {
+    transform: translateY(-50%) rotate(-45deg);
+    margin-top: 5px;
 }
 
 .accordion__header {
     position: relative;
     padding: 15px 20px 15px 60px;
-    border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid transparent;
 }    
+
+.accordion__header:after {
+    content: '';
+    display: block;
+    width: 16px;
+    height: 16px;
+    border-top: 2px solid #ccc;
+    border-right: 2px solid #ccc;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    z-index: 1;
+    transform: translateY(-50%) rotate(135deg);
+}
 
 .accordion__icon {
     position: absolute;
@@ -434,7 +466,7 @@ hr {
 
 .accordion__content {
     padding: 15px 20px;
-
+    display: none;
     font-size: 15px;
     color: #999;
     font-style: italic;
@@ -447,3 +479,4 @@ hr {
     text-transform: uppercase;
 }
 
+ 
