MoGo add cursor pointer

--- a/mogo/assets/css/style.css
+++ b/mogo/assets/css/style.css
@@ -440,6 +440,7 @@ hr {
     position: relative;
     padding: 15px 20px 15px 60px;
     border-bottom: 1px solid transparent;
+    cursor: pointer;
 }    
 
 .accordion__header:after {
