--- a/barbershop/css/style.css
+++ b/barbershop/css/style.css
@@ -211,3 +211,15 @@ a {
 .shop-body {
     background-color: #f8f3f0;
 }
+
+.product-photo-preview {
+    list-style: none;
+}
+
+.product-photo-preview li {
+    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+.product-photo-full {
+    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
