--- a/howTo/forms/registerForm/style.css
+++ b/howTo/forms/registerForm/style.css
@@ -19,6 +19,11 @@
 form {
     display: flex;
     flex-direction: column;
+    height: 235px;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #FAFAFA;
+
 }
 
 .registeredForm__title {
@@ -36,3 +41,15 @@ form {
     font-family: fontawesome;
     margin-right: 10px;
 }
+
+input {
+    width: 274px;
+    height: 45px;
+    border: 2px solid #E0E0E0;
+}
+
+[placeholder] {
+    font-size: 20px;
+    padding-left: 10px;
+}
+
