--- a/howTo/page/leonardo/style.css
+++ b/howTo/page/leonardo/style.css
@@ -18,7 +18,7 @@
     display: inline-block;
     width: 280px;
     height: 43px;
-    font-family: 'Popins', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 32px;
     font-weight: normal;
     font-style: normal;
@@ -164,4 +164,56 @@ header {
 
 .img__reverse {
     margin-left: 120px;
+}
+
+.gadget {
+    border-bottom: 4px solid #ededed;
+}
+
+.advantages {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+}
+
+.advantages__title {
+    font-family: 'Poppins', serif ;
+    font-size: 36px;
+    font-weight: bold;
+    font-style: normal;
+    line-height: 1.2;
+    margin-bottom: 60px;
+}
+
+.advantages__wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 1000px;
+}
+
+.advantages__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;;
+}
+
+.advantages__item__title {
+    font-size: 20px;
+    font-family: 'Lora', sans-serif;
+    line-height: 1.4;
+    display: block;
+    width: 206px;
+    height: 117px;
+    text-align: center;
+}
+
+.advantages__item img {
+    margin-bottom: 22px;
+}
+
+.client {
+    display: flex;
 }
