--- a/howTo/page/leonardo/style.css
+++ b/howTo/page/leonardo/style.css
@@ -216,4 +216,51 @@ header {
 
 .client {
     display: flex;
+    border-bottom: 4px solid #dddddd;
 }
+
+.client__img {
+    width: 156px;
+    height: 156px;
+    border-radius: 50%;
+    margin-left: 236px;
+    margin-top: 122px;
+    margin-bottom: 195px;
+}
+
+.client__title {
+    display: block;
+    width: 370px;
+    height: 47px;
+    font-size: 36px;
+    font-family: 'Lora', serif;
+    font-weight: bold;
+    line-height: 1.2;
+
+}
+
+.client__text {
+    display: block;
+    width: 490px;
+    font-family: 'Lora', serif;
+    text-align: left;
+    font-size: 16px;
+    margin-top: 68px;
+    margin-left: 50px;
+    line-height: 1.5;
+}
+
+.client__name {
+    display: block;
+    width: 113px;
+    font-family: 'Lora', serif;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 1.2;
+    margin-top: 20px;
+    margin-left: 420px;
+    padding-top: 10px;
+    border-top: solid 2px #dddddd;
+}
+
+
