--- a/style.css
+++ b/style.css
@@ -19,36 +19,51 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Header */
 
-.header {
+header {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	height: 100vh;
-	justify-content: space-around;
+	justify-content: space-between;
 	
 }
 
-img {
-	align-self: center;
+.header__face {
+	display: block;
+	width: 250px;
+	height: 250px;
 }
 
 h1 {
+	margin-top: 20px;
+	width: 800px;
+	height: 100px;
+	display: block;
 	font-family: 'Swanky and Moo', cursive;
 	font-size: 72px;
-	align-content: center;
-	
-	
+	text-align: center;
 }
 
 h2 {
+	display: block;
+	width: 600px;
+	height: 60px;
 	font-family: 'Kaushan Script', cursive;
 	font-size: 40px;
-	align-content: center;
+	text-align: center;
 }
 
-.header--mySocial {
-	display: flex;
-	align-content: space-around;
+.header__mySocial {
+	display: block;
 }
+
+.header__mySocialWrapper {
+	display: flex;
+	justify-content: space-around;
+	width: 1200px;
+}
+
+
 
 .skills {
 	display: flex;
@@ -83,22 +98,7 @@ a.projects-link:hover {
 }
 
 
-.header--myName {
-	align-self: center;
-	
-}
 
-.header--myFoto{
-	align-self: center;
-}
-
-.header--mySocial {
-	align-self: center;
-}
-
-.my_position {
-	text-align: center;
-}
 
 
   
