--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
-
-
 *,
 *:after,
 *:before {
 	box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
 	margin: 0;
 }
 
 .container {
-    width: 100%;
-    max-width: 1200px;
+	width: 100%;
+	max-width: 1200px;
 	margin: 0 auto;
-	
+
 }
 
 /* Header */
@@ -25,7 +28,7 @@ header {
 	align-items: center;
 	height: 100vh;
 	justify-content: space-between;
-	
+	margin-bottom: 150px;
 }
 
 .header__face {
@@ -34,7 +37,7 @@ header {
 	height: 250px;
 }
 
-h1 {
+.my_name {
 	margin-top: 20px;
 	width: 800px;
 	height: 100px;
@@ -44,7 +47,7 @@ h1 {
 	text-align: center;
 }
 
-h2 {
+.my_position {
 	display: block;
 	width: 600px;
 	height: 60px;
@@ -63,12 +66,25 @@ h2 {
 	width: 1200px;
 }
 
-
+/*Skills*/
 
 .skills {
 	display: flex;
-	justify-content: space-around;
-	height: 300px;
+	justify-content: center;
+	width: 1200px;
+	height: 350px;
+}
+
+.skills__hard {
+	display: block;
+	width: 40%;
+	text-align: center;
+}
+
+.skills__soft {
+	display: block;
+	width: 40%;
+	text-align: center;
 }
 
 ul {
@@ -77,30 +93,18 @@ ul {
 	font-size: 18px;
 }
 
-.projects {
-	padding-bottom: 100px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	align-content: space-around;
-	
-}
-
 a.projects-link {
 	text-decoration: none;
 	font-family: 'Swanky and Moo', cursive;
 	font-size: 18px;
 	padding-top: 10px;
+	color: black;
 }
 
-a.projects-link:hover {
-	text-decoration: underline;
+.projects {
+	text-align: center;
 }
 
-
-
-
-
-  
-
-
+.projects-link {
+	display: block;
+}
