--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ header {
 
 .header__face {
 	display: block;
-	width: 250px;
-	height: 250px;
+	width: 400px;
+	height: 400px;
 }
 
 .my_name {
@@ -63,7 +63,7 @@ header {
 .header__mySocialWrapper {
 	display: flex;
 	justify-content: space-around;
-	width: 1200px;
+	width: 1000px;
 }
 
 /*Skills*/
@@ -102,6 +102,7 @@ a.projects-link {
 }
 
 .projects {
+	margin: 0 auto;
 	text-align: center;
 }
 
@@ -152,5 +153,51 @@ a.projects-link {
 			  filter: blur(0);
 	  opacity: 1;
 	}
+  }
+
+  @media (max-width: 768px) {
+
+	header {
+		margin-bottom: 70px;
+	}
+	
+	.container {
+		width: 100%;
+	}
+
+	  .my_name {
+		  font-size: 20px;
+		  width: 100%;
+		  height: 40px;
+
+	  }
+
+	  .my_position {
+		  font-size: 18px;
+		  width: 200px;
+		  height: 30px;
+	  }
+
+	  .header__face {
+		  height: 100px;
+		  width: 100px;
+		  margin: 0 auto;
+	  }
+
+	  .header__mySocialWrapper {
+		width: 200px;
+		height: 30px;
+	  }
+
+	  .header__mySocialWrapper img {
+		  width: 30px;
+		  height: 30px;
+	  }
+
+	  .skills {
+		  width: 100%;
+		  flex-direction: column;
+		  align-items: center;
+	  }
   }
   
