--- a/howTo/page/evrodom/css/index.css
+++ b/howTo/page/evrodom/css/index.css
@@ -342,6 +342,10 @@ template {
   font-family: 'Montserrat', sans-serif;
 }
 
+.container-xl {
+  padding: 0;
+}
+
 .header__flexContainer {
   background-image: url(../img/main.jpg);
   display: flex;
