--- a/howTo/page/evrodom/scss/index.scss
+++ b/howTo/page/evrodom/scss/index.scss
@@ -5,7 +5,9 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-
+.container-xl {
+    padding: 0;
+}
 
 .header__flexContainer {
     background-image: url(../img/main.jpg);
