--- a/howTo/page/evrodom/scss/index.scss
+++ b/howTo/page/evrodom/scss/index.scss
@@ -5,28 +5,46 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+@mixin respondTo ($_minWidth, $_maxWidth) {
+    @media (min-width: $_minWidth) and (max-width: $_maxWidth) {
+        @content;
+    }
+}
+
 .container-xl {
     padding: 0;
 }
 
 .header__flexContainer {
     background-image: url(../img/main.jpg);
+    background-color: grey;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     display: flex;
-    height: 670px;
+    height: 80vh;
     flex-direction: column;
     align-items: center;
+    @include respondTo (320px, 767px) {
+        height: 87vh;
+    }
     
 }
 
 .header__title {
-    margin-top: 283px;
+    margin-top: 35vh;
+    text-align: center;
     display: block;
     font-size: 42px;
     color: white;
+    background-color: rgba(0,0,0, 0.4);
+    @include respondTo (320px, 767px) {
+        font-size: 1.3em; 
+    }
 }
 
 .header__link {
-    margin-top: 100px;
+    margin-top: 28vh;
     display: block;
     text-decoration: none;
     color: black;
@@ -39,5 +57,8 @@
         text-decoration: none;
         color: white;
         background-color: #f42267;
+    }
+    @include respondTo (320px, 767px) {
+        margin-top: 33vh;
     }
 } 
