--- a/howTo/page/evrodom/css/index.css
+++ b/howTo/page/evrodom/css/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -401,5 +402,57 @@ template {
   .header__link {
     margin-top: 33vh;
   }
+}
+
+/*стилизация классических окон и дверей*/
+.classic__title {
+  font-size: 1.7em;
+  font-weight: 400;
+  text-align: center;
+  margin-top: 5rem;
+}
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .classic__title {
+    margin-top: 2rem;
+    font-size: 1em;
+  }
+}
+
+.classic__flexContain {
+  display: flex;
+  margin-top: 5rem;
+}
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .classic__flexContain {
+    flex-direction: column;
+    margin-top: 2rem;
+  }
+}
+
+.classic__text {
+  margin-left: 2em;
+  font-size: 1.2rem;
+  min-width: 300px;
+}
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .classic__text {
+    margin-left: .5rem;
+    font-size: .7em;
+    margin-top: 1rem;
+  }
+}
+
+.wrapper__classicImg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 600px;
+}
+
+.classic__img {
+  width: 100%;
 }
 /*# sourceMappingURL=index.css.map */
