--- a/howTo/page/evrodom/scss/index.scss
+++ b/howTo/page/evrodom/scss/index.scss
@@ -62,3 +62,47 @@
         margin-top: 33vh;
     }
 } 
+
+/*стилизация классических окон и дверей*/
+
+.classic__title {
+    font-size: 1.7em;
+    font-weight: 400;
+    text-align: center;
+    margin-top: 5rem;
+    @include respondTo (320px, 767px) {
+        margin-top: 2rem;
+        font-size: 1em;
+    }
+}
+
+.classic__flexContain {
+    display: flex;
+    margin-top: 5rem;
+    @include respondTo (320px, 767px) {
+        flex-direction: column;
+        margin-top: 2rem;
+    }
+}
+
+.classic__text {
+    margin-left: 2em;
+    font-size: 1.2rem;
+    min-width: 300px;
+    @include respondTo (320px, 767px) {
+        margin-left: .5rem;
+        font-size: .7em;
+        margin-top: 1rem;
+    }
+}
+
+.wrapper__classicImg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 600px;
+}
+
+.classic__img {
+    width: 100%;
+}
