--- a/howTo/page/evrodom/css/index.css
+++ b/howTo/page/evrodom/css/index.css
@@ -366,7 +366,7 @@ template {
 }
 
 .header__title {
-  margin-top: 35vh;
+  margin-top: 28rem;
   text-align: center;
   display: block;
   font-size: 42px;
@@ -377,11 +377,12 @@ template {
 @media (min-width: 320px) and (max-width: 767px) {
   .header__title {
     font-size: 1.3em;
+    margin-top: 17rem;
   }
 }
 
 .header__link {
-  margin-top: 28vh;
+  margin-top: 20rem;
   display: block;
   text-decoration: none;
   color: black;
@@ -400,7 +401,7 @@ template {
 
 @media (min-width: 320px) and (max-width: 767px) {
   .header__link {
-    margin-top: 33vh;
+    margin-top: 10rem;
   }
 }
 
@@ -450,6 +451,12 @@ template {
   align-items: center;
   justify-content: center;
   min-width: 600px;
+}
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .wrapper__classicImg {
+    min-width: 300px;
+  }
 }
 
 .classic__img {
