--- a/howTo/page/evrodom/scss/index.scss
+++ b/howTo/page/evrodom/scss/index.scss
@@ -32,7 +32,7 @@
 }
 
 .header__title {
-    margin-top: 35vh;
+    margin-top: 28rem;
     text-align: center;
     display: block;
     font-size: 42px;
@@ -40,11 +40,12 @@
     background-color: rgba(0,0,0, 0.4);
     @include respondTo (320px, 767px) {
         font-size: 1.3em; 
+        margin-top: 17rem;
     }
 }
 
 .header__link {
-    margin-top: 20vh;
+    margin-top: 20rem;
     display: block;
     text-decoration: none;
     color: black;
@@ -59,7 +60,7 @@
         background-color: #f42267;
     }
     @include respondTo (320px, 767px) {
-        margin-top: 33vh;
+        margin-top: 10rem;
     }
 } 
 
@@ -101,7 +102,11 @@
     align-items: center;
     justify-content: center;
     min-width: 600px;
+    @include respondTo (320px, 767px) {
+        min-width: 300px;
+    }
 }
+
 
 .classic__img {
     width: 100%;
