--- a/howTo/page/evrodom/css/index.css
+++ b/howTo/page/evrodom/css/index.css
@@ -372,11 +372,35 @@ nav {
 /*стилизация хедера*/
 header {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
   height: 100vh;
   background: gray;
-  background-image: url(../img/header.jpg);
+  background-image: url(../img/header3.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.header__title {
+  font-size: 8em;
+  font-weight: 400;
+  background-color: rgba(56, 51, 51, 0.603);
+  color: white;
+}
+
+.header__link {
+  font-size: 3em;
+  background-color: white;
+  color: #cc4c4c;
+  padding: 15px 10px;
+  border-radius: 10px;
+  border: 1px solid #cc4c4c;
+}
+
+.header__link:hover {
+  background-color: #cc4c4c;
+  color: white;
 }
 /*# sourceMappingURL=index.css.map */
