--- a/howTo/page/evrodom/scss/index.scss
+++ b/howTo/page/evrodom/scss/index.scss
@@ -36,11 +36,35 @@ nav {
 
 header {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
     height: 100vh;
     background: gray;
-    background-image: url(../img/header.jpg);
+    background-image: url(../img/header3.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+}
+
+.header__title {
+    font-size: 8em;
+    font-weight: 400;
+    background-color: rgba(56, 51, 51, 0.603);
+    color: white;
+}
+
+.header__link {
+    font-size: 3em;
+    background-color: white;
+    color:  rgb(204, 76, 76);
+    padding: 15px 10px;
+    border-radius: 10px;
+    border: 1px solid rgb(204, 76, 76);
+    &:hover {
+        background-color: rgb(204, 76, 76);
+        color: white;
+    }
+
 }
 
