finish change on top nav and header

--- a/howTo/page/evrodom/scss/index.scss
+++ b/howTo/page/evrodom/scss/index.scss
@@ -15,22 +15,157 @@ a {
 
 /*стилизация верхней навигации*/
 
-nav {
+.topNav {
     display: grid;
     grid-template-columns: 200px 1fr 300px;
     align-items: center;
-    background-color:rgba(92, 88, 88, 0.164);
+    background-color: rgba(92, 88, 88, 0.164);
+    overflow: hidden;
 }
 
-.topNav__items > a {
+.topNav__items a {
     margin-left: 2rem;
 }
 
 .topNav__phone:before {
-    content: '\f879' ;
+    content: '\f879';
     font-family: fontawesome;
     margin-right: 1em;
 }
+
+.topNav__icon {
+    display: block;
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+}
+
+.fa-bars {
+    font-family: fontawesome;
+    font-size: 4rem;
+}
+
+
+
+/*стилизация гамбургера под телевфоны*/
+
+@media screen and (max-width: 1255px) {
+
+    .topNav__items,
+    .topNav__phone {
+        display: none;
+    }
+
+}
+
+.hamburger-menu {
+    display: none;
+    @media screen and (max-width: 1255px) {
+        display: flex;
+    }
+}
+
+#menu__toggle {
+    opacity: 0;
+}
+
+#menu__toggle:checked~.menu__btn>span {
+    transform: rotate(45deg);
+}
+
+#menu__toggle:checked~.menu__btn>span::before {
+    top: 0;
+    transform: rotate(0);
+}
+
+#menu__toggle:checked~.menu__btn>span::after {
+    top: 0;
+    transform: rotate(90deg);
+}
+
+#menu__toggle:checked~.menu__box {
+    visibility: visible;
+    left: 0;
+}
+
+.menu__btn {
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+
+    width: 26px;
+    height: 26px;
+
+    cursor: pointer;
+    z-index: 1;
+}
+
+.menu__btn>span,
+.menu__btn>span::before,
+.menu__btn>span::after {
+    display: block;
+    position: absolute;
+
+    width: 100%;
+    height: 2px;
+
+    background-color: #616161;
+
+    transition-duration: .25s;
+}
+
+.menu__btn>span::before {
+    content: '';
+    top: -8px;
+}
+
+.menu__btn>span::after {
+    content: '';
+    top: 8px;
+}
+
+.menu__box {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 0;
+    left: -100%;
+
+    width: 300px;
+    height: 100%;
+
+    margin: 0;
+    padding: 80px 0;
+
+    list-style: none;
+
+    background-color: #ECEFF1;
+    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+
+    transition-duration: .25s;
+}
+
+.menu__item {
+    display: block;
+    padding: 12px 24px;
+
+    color: #333;
+
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+
+    text-decoration: none;
+
+    transition-duration: .25s;
+}
+
+.menu__item:hover {
+    background-color: #CFD8DC;
+}
+
 
 /*стилизация хедера*/
 
@@ -45,6 +180,9 @@ header {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    @media screen and (max-width: 1500px){
+        background-position-x: -180px;;
+    }
 }
 
 .header__title {
@@ -57,14 +195,36 @@ header {
 .header__link {
     font-size: 3em;
     background-color: white;
-    color:  rgb(204, 76, 76);
+    color: rgb(204, 76, 76);
     padding: 15px 10px;
     border-radius: 10px;
     border: 1px solid rgb(204, 76, 76);
+
     &:hover {
         background-color: rgb(204, 76, 76);
         color: white;
     }
 
+}
+
+@media screen and (max-width: 1180px) {
+    .header__title {
+        font-size: 6em;
+    }
+}
+
+@media screen and (max-width: 1255px) {
+    .header__title {
+        font-size: 4em;
+    }
+}
+
+@media screen and (max-width: 460px) {
+    .header__title {
+        font-size: 2.5em;
+    }
+    .header__link {
+        font-size: 2em;
+    }
 }
 
