delete link html add it on css

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 *:before {
 	box-sizing: border-box;
 }
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 
 h1,
 h2,
