--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 	box-sizing: border-box;
 }
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Swanky+and+Moo+Moo&display=swap');
 
 h1,
 h2,
